@@ -4,10 +4,8 @@ import com.kobe.warehouse.domain.User;
 import com.kobe.warehouse.repository.UserRepository;
 import java.util.*;
 import java.util.stream.Collectors;
-import org.hibernate.validator.internal.constraintvalidators.hv.EmailValidator;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -32,16 +30,6 @@ public class DomainUserDetailsService implements UserDetailsService {
   public UserDetails loadUserByUsername(final String login) {
     log.debug("Authenticating {}", login);
 
-    if (new EmailValidator().isValid(login, null)) {
-      return userRepository
-          .findOneWithAuthoritiesByEmailIgnoreCase(login)
-          .map(user -> createSpringSecurityUser(login, user))
-          .orElseThrow(
-              () ->
-                  new UsernameNotFoundException(
-                      "User with email " + login + " was not found in the database"));
-    }
-
     String lowercaseLogin = login.toLowerCase(Locale.ENGLISH);
     return userRepository
         .findOneWithAuthoritiesByLogin(lowercaseLogin)
@@ -57,16 +45,15 @@ public class DomainUserDetailsService implements UserDetailsService {
     if (!user.isActivated()) {
       throw new UserNotActivatedException("User " + lowercaseLogin + " was not activated");
     }
-    /* List<GrantedAuthority> grantedAuthorities = user
-    .getAuthorities()
-    .stream()
-    .map(Authority::getName)
-    .map(SimpleGrantedAuthority::new)
-    .collect(Collectors.toList());*/
-    List<GrantedAuthority> grantedAuthorities =
-        SecurityUtils.mergeAuthorities(user.getAuthorities()).stream()
+  /*  List<SimpleGrantedAuthority> grantedAuthorities =
+        user.getAuthorities().stream()
+            .map(Authority::getName)
             .map(SimpleGrantedAuthority::new)
-            .collect(Collectors.toList());
+            .toList();*/
+      List<SimpleGrantedAuthority> grantedAuthorities =
+          SecurityUtils.mergeAuthorities(user.getAuthorities()).stream()
+              .map(SimpleGrantedAuthority::new)
+              .collect(Collectors.toList());
     return new org.springframework.security.core.userdetails.User(
         user.getLogin(), user.getPassword(), grantedAuthorities);
   }
